2.1.3: Border Radius fix for input on mobile

--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ p {
 }
 
 input {
+    border-radius: 0;
     text-align: center;
     border: 0;
     background: #333;
